# pltex

./: README.md  pyproject.toml
easy_plot/: __init__.py  figure.py  main.py  types.py
pltex/: figure.py  saving.py  str_format.py  text_handler.py
tests/: test_spine_colour.py
