[project]
name = "easy-plot"
version = "0.1.0"
description = "Matplotlib wrapper for ease of plot creation and control"
authors = [
    {name = "Henry Pickersgill",email = "htap2@live.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "PySide6==6.9.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
